# hierarchical-bitmask-implicit-grids

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ig_benchmark.cc  vcpkg.json
cmake/: append.cmake
core/: CMakeLists.txt  animation.cc  animation.hh  animation.tcc  argvec.hh  bitset.cc  bitset.hh  bvh.hh  bvh.tcc  core.hh  cvar.cc  cvar.hh  cvar.tcc  ecs.hh  error.hh  filesystem.cc  filesystem.hh  flat_set.hh  flat_set.tcc  input.hh  io.cc  io.hh  log.cc  log.hh  macro_hacks.hh  math.cc  math.hh  math.tcc  resource_store.cc  resource_store.hh  resource_store.tcc  sdl.cc  sdl.hh  skeleton.cc  skeleton.hh  sort.hh  sort.tcc  stack_allocator.cc  stack_allocator.hh  stack_allocator.tcc  (+13 more)
extra/: CMakeLists.txt  game_object.cc  game_object.hh  gltf.cc  gltf.hh
gfx/: CMakeLists.txt  acceleration_structure.cc  acceleration_structure.hh  alias_table.glsl  alias_table_importance.comp  animation.comp  blit_stage.cc  blit_stage.hh  camera.cc  camera.hh  clear_stage.cc  clear_stage.hh  clustering.comp  clustering.glsl  clustering_hierarchy.comp  clustering_stage.cc  clustering_stage.hh  color.glsl  compute_pipeline.cc  compute_pipeline.hh  context.cc  context.hh  decal.glsl  decal.hh  decal_order.comp  decal_ranges.comp  descriptor_set.cc  descriptor_set.hh  device.cc  device.hh  environment_map.cc  environment_map.hh  envmap.frag  envmap.glsl  envmap.vert  envmap_stage.cc  envmap_stage.hh  equirectangular_to_cubemap_convert.comp  event.cc  event.hh  (+103 more)
phys/: CMakeLists.txt  collider.cc  collider.hh  collider_internal.cc  collision.cc  collision.hh  collision_system.cc  collision_system.hh  constraint.cc  constraint.hh  context.cc  context.hh  internal.cc  phys.hh  shape.cc  shape.hh  simulator.cc  simulator.hh  skeleton_collider.cc  skeleton_collider.hh
